--- a/SimpleShimmer.csproj
+++ b/SimpleShimmer.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net9.0-windows10.0.22621.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.22621.0</TargetPlatformMinVersion>
     <RootNamespace>SimpleShimmer</RootNamespace>
     <UseWinUI>true</UseWinUI>
@@ -9,6 +9,7 @@
   	<RepositoryUrl>https://github.com/mouhamedhazem149/SimpleShimmer</RepositoryUrl>
   	<description>Shimmering animation helper for WinUI</description>
   	<Version>1.0.3</Version>
+    <EnableCoreMrtTooling Condition=" '$(BuildingInsideVisualStudio)' != 'true' ">false</EnableCoreMrtTooling>
 	<RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &gt;= 8">win-x86;win-x64;win-arm64</RuntimeIdentifiers>
 	<RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &lt; 8">win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
   </PropertyGroup>
@@ -31,8 +32,10 @@
   <ItemGroup>
 
 	  <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.2.0" />
-	  <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.5.241001000" />
-	  <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1" />
+
+	  <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250109001-experimental2" />
+	  <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
+
 	  <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
 
   </ItemGroup>
