--- a/SimpleShimmer.csproj
+++ b/SimpleShimmer.csproj
@@ -3,12 +3,15 @@
     <TargetFramework>net9.0-windows10.0.22621.0</TargetFramework>
     <TargetPlatformMinVersion>10.0.22621.0</TargetPlatformMinVersion>
     <RootNamespace>SimpleShimmer</RootNamespace>
-    <UseWinUI>true</UseWinUI>
+	<PackageId>SimpleShimmer</PackageId>
+	<RepositoryType>git</RepositoryType>
+	<UseWinUI>true</UseWinUI>
   	<Authors>Mohamed Hazem</Authors>
   	<PackageProjectUrl>https://github.com/mouhamedhazem149/SimpleShimmer</PackageProjectUrl>
   	<RepositoryUrl>https://github.com/mouhamedhazem149/SimpleShimmer</RepositoryUrl>
   	<description>Shimmering animation helper for WinUI</description>
-  	<Version>1.0.4</Version>
+	<Version>1.0.7</Version>
+	<NuGetVersion>1.0.7</NuGetVersion>
     <EnableCoreMrtTooling Condition=" '$(BuildingInsideVisualStudio)' != 'true' ">false</EnableCoreMrtTooling>
 	<RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &gt;= 8">win-x86;win-x64;win-arm64</RuntimeIdentifiers>
 	<RuntimeIdentifiers Condition="$([MSBuild]::GetTargetFrameworkVersion('$(TargetFramework)')) &lt; 8">win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
