--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.Nu_Key }}
 
-    - name: Push
+    - name: Push to githubPackages
       run: dotnet nuget add source --username mou-haz --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/mou-haz/index.json"
       env:
         GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
