--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,10 @@ jobs:
         git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
         git branch --remote --contains | grep origin/main
 
+    - name: Install Dependencies
+      timeout-minutes: ${{ fromJSON(env.STEP_TIMEOUT_MINUTES) }}
+      uses: "./.github/steps/install_dependencies"
+
     - name: Set VERSION variable from tag
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       
