--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,8 +44,8 @@ jobs:
       shell: pwsh
       run: msbuild ./SimpleShimmer.csproj /t:pack /property:Configuration=Release
 
-    - name: Push
-      run: dotnet nuget push SimpleShimmer.${VERSION}.nupkg --source https://api.nuget.org/v3/index.json --api-key ${GITHUB_TOKEN}
+    - name: Push to NuGet
+      run: dotnet nuget push SimpleShimmer.${VERSION}.nupkg --api-key ${GITHUB_TOKEN} --source https://api.nuget.org/v3/index.json 
       env:
         GITHUB_TOKEN: ${{ secrets.Nu_Key }}
 
@@ -55,6 +55,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
 
     - name: Push
-      run: dotnet nuget push SimpleShimmer.${VERSION}.nupkg --source https://nuget.pkg.github.com/mou-haz/index.json --api-key ${GITHUB_TOKEN}
+      run: dotnet nuget push SimpleShimmer.${VERSION}.nupkg --api-key ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/mou-haz/index.json
       env:
         GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
