--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,16 +45,15 @@ jobs:
       run: msbuild ./SimpleShimmer.csproj /t:pack /property:Configuration=Release
 
     - name: Push to NuGet
-      run: dotnet nuget push SimpleShimmer.${VERSION}.nupkg --api-key ${GITHUB_TOKEN} --source https://api.nuget.org/v3/index.json 
-      env:
-        GITHUB_TOKEN: ${{ secrets.Nu_Key }}
+      shell: cmd
+      run: dotnet nuget push SimpleShimmer.${VERSION}.nupkg --api-key ${{ secrets.Nu_Key }} --source https://api.nuget.org/v3/index.json 
 
     - name: Push to GithubPackages
-      run: dotnet nuget add source --username mou-haz --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/mou-haz/index.json"
-      env:
-        GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
+      shell: cmd
+      run: dotnet nuget add source --username mou-haz --password ${{ secrets.GithubPackages_Key }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/mou-haz/index.json"
 
     - name: Push
+      shell: cmd
       run: dotnet nuget push SimpleShimmer.${VERSION}.nupkg --api-key ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/mou-haz/index.json
       env:
         GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
