--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,12 +37,12 @@ jobs:
     - name: Test
       run: dotnet test --configuration Release --runtime win-x64 /p:Version=${VERSION} /p:AssemblyVersion=${VERSION} /p:NuGetVersion=${VERSION} --no-build
 
-    #- name: Pack
-    #  run: dotnet pack --configuration Release --runtime win-x64 /p:Version=${VERSION} /p:AssemblyVersion=${VERSION} /p:NuGetVersion=${VERSION} --no-build --output .
-
     - name: Pack
-      shell: pwsh
-      run: msbuild ./SimpleShimmer.csproj /t:pack /property:Configuration=Release
+      run: dotnet pack --configuration Release --runtime win-x64 /p:Version=${VERSION} /p:AssemblyVersion=${VERSION} /p:NuGetVersion=${VERSION} --no-build --output .
+
+    #- name: Pack
+    #  shell: pwsh
+    #  run: msbuild ./SimpleShimmer.csproj /t:pack /property:Configuration=Release
 
     - name: Push to NuGet
       shell: cmd
