--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,9 @@ jobs:
       shell: pwsh # Use PowerShell for better string handling
     #  run: echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
     
+    - name: Debug VERSION
+      run: echo "Version is ${{ env.VERSION }}"
+
     - name: Build SimpleShimmer
       run: msbuild ./SimpleShimmer.csproj /r /property:Configuration=Release
 
