--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,14 +32,14 @@ jobs:
       with:
         version: ${{ steps.previoustag.outputs.tag }}
 
-     - name: 'Get next minor version'
-      id: next
+    - name: 'Get next minor version'
+      id: next_minor
       uses: "WyriHaximus/github-action-next-semvers@v1"
       with:
         version: ${{ steps.previoustag.outputs.tag }}
 
     - name: New VERSION
-      run: echo "New Version is ${{ steps.next.outputs.patch }}"
+      run: echo "New Version is ${{ steps.next_minor.outputs.patch }}"
 
     - name: Build SimpleShimmer
       run: dotnet build --configuration Release --runtime win-x64
@@ -48,16 +48,16 @@ jobs:
       run: dotnet test --configuration Release --runtime win-x64 --no-build
 
     - name: Pack
-      run: dotnet pack --configuration Release --runtime win-x64 /p:Version=${{ steps.next.outputs.patch }} --no-build --output .
+      run: dotnet pack --configuration Release --runtime win-x64 /p:Version=${{ steps.next_minor.outputs.patch }} --no-build --output .
 
     #- name: Pack
     #  shell: pwsh
     #  run: msbuild ./SimpleShimmer.csproj /t:pack /property:Configuration=Release
 
     - name: Push to NuGet
-      run: dotnet nuget push SimpleShimmer.${{ steps.next.outputs.patch }}.nupkg --api-key ${{ secrets.Nu_Key }} --source https://api.nuget.org/v3/index.json 
+      run: dotnet nuget push SimpleShimmer.${{ steps.next_minor.outputs.patch }}.nupkg --api-key ${{ secrets.Nu_Key }} --source https://api.nuget.org/v3/index.json 
 
     - name: Push
-      run: dotnet nuget push SimpleShimmer.${{ steps.next.outputs.patch }}.nupkg --api-key ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/mou-haz/index.json
+      run: dotnet nuget push SimpleShimmer.${{ steps.next_minor.outputs.patch }}.nupkg --api-key ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/mou-haz/index.json
       env:
         GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
