--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 60
 
     steps:
@@ -26,13 +26,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
         
-    - name: Get next version
-      id: next
-      uses: 'WyriHaximus/github-action-next-release-version@1.0.0'
-      with:
-        version: ${{ steps.previoustag.outputs.tag }}
-
-    - name: 'Get next minor version'
+    - name: Get next minor version
       id: next_minor
       uses: "WyriHaximus/github-action-next-semvers@v1"
       with:
