--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,13 +36,13 @@ jobs:
       run: echo "New Version is ${{ steps.next_minor.outputs.patch }}"
 
     - name: Build SimpleShimmer
-      run: dotnet build --configuration Release --runtime win-x64
+      run: dotnet build --configuration Release
 
     - name: Test
-      run: dotnet test --configuration Release --runtime win-x64 --no-build
+      run: dotnet test --configuration Release --no-build
 
     - name: Pack
-      run: dotnet pack --configuration Release --runtime win-x64 /p:Version=${{ steps.next_minor.outputs.patch }} --no-build --output .
+      run: dotnet pack --configuration Release /p:Version=${{ steps.next_minor.outputs.patch }} --no-build --output .
 
     #- name: Pack
     #  shell: pwsh
