--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,13 @@ jobs:
       uses: "WyriHaximus/github-action-next-semvers@v1"
       with:
         version: ${{ steps.previoustag.outputs.tag }}
+    - name: 'Create new milestone'
+      id: createmilestone
+      uses: "WyriHaximus/github-action-create-milestone@v1"
+      with:
+        title: ${{ steps.next_minor.outputs.patch }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
 
     - name: New VERSION
       run: echo "New Version is ${{ steps.next_minor.outputs.patch }}"
