--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,9 +40,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
 
-    - name: New VERSION
-      run: echo "New Version is ${{ steps.next_minor.outputs.patch }}"
-
     - name: Build SimpleShimmer
       run: dotnet build --configuration Release
 
@@ -54,6 +51,15 @@ jobs:
 
     - name: Push to NuGet
       run: dotnet nuget push SimpleShimmer.${{ steps.next_minor.outputs.patch }}.nupkg --api-key ${{ secrets.Nu_Key }} --source https://api.nuget.org/v3/index.json 
+    
+    - name: Push New Tag
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git tag ${{ steps.next_minor.outputs.patch }}
+        git push origin ${{ steps.next_minor.outputs.patch }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
 
     - name: Push
       run: dotnet nuget push SimpleShimmer.${{ steps.next_minor.outputs.patch }}.nupkg --api-key ${GITHUB_TOKEN} --source https://nuget.pkg.github.com/mou-haz/index.json
