--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,14 +32,6 @@ jobs:
       with:
         version: ${{ steps.previoustag.outputs.tag }}
 
-    - name: 'Create new milestone'
-      id: createmilestone
-      uses: "WyriHaximus/github-action-create-milestone@v1"
-      with:
-        title: ${{ steps.next_minor.outputs.patch }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GithubPackages_Key }}
-
     - name: Build SimpleShimmer
       run: dotnet build --configuration Release
 
@@ -54,8 +46,8 @@ jobs:
     
     - name: Push New Tag
       run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git config user.name "mou-haz"
+        git config user.email "mou-haz@users.noreply.github.com"
         git tag ${{ steps.next_minor.outputs.patch }}
         git push origin ${{ steps.next_minor.outputs.patch }}
       env:
