--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0 # required for github-action-get-previous-tag
+        fetch-depth: 0
 
     - name: Get Previous tag
       id: previoustag
