--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    
+    - name: Fetch Tags
+      run: git fetch --tags
 
     - name: Get Previous tag
       id: previoustag
