--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
 
     - name: Push New Tag
       run: |
+        git config user.name github-action[NuGet Publish-Workflow]
         git tag -a v${{ steps.next_minor.outputs.patch }} -m "version: v${{ steps.next_minor.outputs.patch }}"
         git push --atomic https://mou-haz:${{ secrets.GithubPackages_Key }}@github.com/mou-haz/SimpleShimmer.git v${{ steps.next_minor.outputs.patch }}
 
