--- a/SimpleShimmer.csproj
+++ b/SimpleShimmer.csproj
@@ -38,7 +38,7 @@
 
 	  <PackageReference Include="Microsoft.Graphics.Win2D" Version="1.2.0" />
 
-	  <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250109001-experimental2" />
+	  <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250310001" />
 	  <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.1742" />
 
 	  <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="3.0.0" />
